@@ -1,10 +1,0 @@
-[psana]
-modules = psana_examples.Module1
-events = 200
-
-[psana_examples.Module1]
-filter = on
-events = 25
-
-[psana_examples.Module1:alter]
-events = 15
