@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-06
+2011-03-30 Andy Salnikov
+- adding DumpAcqTdc module
+- removed data/Module1.cfg
+
 Tag: V00-00-05
 2011-03-28 Andy Salnikov
 - added DumpEpics module
